# etudes

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  build_android.sh
app/: main.cpp
aude/: AudeManager.cpp  AudeManager.h  AudeManagerMini.cpp  AudeManagerSdl.cpp  CMakeLists.txt
audengi/: AudeGenerator.cpp  AudeGenerator.h  Audengi.cpp  Audengi.h  CMakeLists.txt
dsp/: CMakeLists.txt  DspFft.h  DspNoiseGen.h
em/: CMakeLists.txt  EmHttp.cpp  EmHttp.h  EmHttpFetcher.cpp  EmHttpFetcher.h  EmHttpHeaders.h
emhttp/: CMakeLists.txt  EmHttp.cpp  EmHttpFetcher.cpp
emwrapper/: CMakeLists.txt  EmFetcher.cpp  EmFetcher.h
etdsp/: EtDspNoise.h
etgui/: CMakeLists.txt  EtGuiColor.h  EtGuiDsp.cpp  EtGuiDsp.h  EtGuiHttpWidget.cpp  EtGuiHttpWidget.h  EtGuiImage.cpp  EtGuiImage.h  EtGuiMainWindow.cpp  EtGuiMainWindow.h  EtGuiPopup.cpp  EtGuiPopup.h  EtGuiSnd.cpp  EtGuiSnd.h  EtGuiWavePlot.cpp  EtGuiWavePlot.h  EtImageBuffer.cpp  EtMapPlot.cpp  EtMapPlot.h  EtMapWidget.cpp  EtMapWidget.h  MiOsmCoords.h
etguiw/: CMakeLists.txt  EtGuiDsp.cpp  EtGuiDsp.h  EtGuiHttpWidget.cpp  EtGuiHttpWidget.h  EtGuiSnd.cpp  EtGuiSnd.h  EtGuiwMainWindow.cpp  EtGuiwMainWindow.h
ethttp/: CMakeLists.txt  EtHttp.cpp  EtHttp.h  EtHttpFetcher.cpp  EtHttpFetcher.h
etosm/: CMakeLists.txt  EtOsmCoords.cpp  EtOsmCoords.h  EtOsmMapPlot.cpp  EtOsmMapWidget.h
etsnd/: CMakeLists.txt  EtSndGenerator.h  EtSndManager.h  EtSndManagerMini.cpp  EtSndManagerSdl.cpp
gui/: CMakeLists.txt  FetchWidget.cpp  FetchWidget.h  ImImage.cpp  ImImage.h  ImMapPlot.cpp  ImMapPlot.h  Image.cpp  Image.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  MiImage.cpp  MiImage.h  MiMapPlot.cpp  MiMapPlot.h  MiMapWidget.cpp
mi/: CMakeLists.txt  FetchWidget.cpp  FetchWidget.h  MiGL.h  MiHttpFetchWidget.cpp  MiHttpFetchWidget.h  MiHttpWidget.cpp  MiImage.cpp  MiImage.h  MiMapPlot.cpp  MiMapPlot.h  MiMapWidget.cpp  MiMapWidget.h  MiOsmCoords.cpp  MiOsmCoords.h  MiWavePlot.h  MiWaveWidget.cpp  MiWaveWidget.h
migui/: CMakeLists.txt  MiAudeGui.cpp  MiAudeGui.h  MiAudengiGui.cpp  MiAudengiGui.h  MiAudengiWidget.cpp  MiAudengiWidget.h  MiColor.h  MiContext.h  MiHttpWidget.cpp  MiHttpWidget.h  MiImage.cpp  MiImage.h  MiImageBuffer.cpp  MiImageBuffer.h  MiMainWindow.cpp  MiMainWindow.h  MiMapPlot.cpp  MiMapPlot.h  MiMapWidget.cpp  MiMapWidget.h  MiPixelPlot.cpp  MiPixelPlot.h  MiPopup.cpp  MiPopup.h  MiQdspGui.cpp  MiQdspGui.h  MiWavePlot.cpp  MiWavePlot.h  MiWaveWidget.cpp
modules/: modules.cmake
modules/etdsp/: CMakeLists.txt  EtDspFft.h
modules/etfire/: CMakeLists.txt  EtFireManager.cpp  EtFireManager.h
modules/ethttp/: CMakeLists.txt  EtHttpFetcherCpphttplib.cpp  EtHttpFetcherDummy.cpp  EtHttpFetcherEmscripten.cpp  EtHttpHeaders.h
modules/etlab/: CMakeLists.txt  EtLab.cpp  EtLab.h  EtLabNative.cpp
modules/etsnd/: CMakeLists.txt  EtSndGenerator.cpp  EtSndManagerDummy.cpp  EtSndManagerMini.cpp  EtSndManagerSdl.cpp
qdsp/: QdspFft.h  QdspNoiseGen.h
snd/: CMakeLists.txt  SndGenerator.cpp  SndGenerator.h  SndManager.h  SndManagerMini.cpp  SndManagerSdl.cpp
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/etgui/: EtGuiContext.h  EtGuiImage.cpp  EtGuiWaveWidget.cpp  EtGuiWaveWidget.h  EtImageBuffer.h
src/etguiw/: EtGuiClay.cpp  EtGuiClay.h  EtGuiFire.cpp  EtGuiFire.h  EtGuiHttpWidget.cpp
src/etosm/: EtOsmMapPlot.cpp  EtOsmMapPlot.h  EtOsmMapWidget.cpp
src_test/: main.cpp
